Ajout du générateur de mdp
