# app/Http/Controllers/HackController.php
@@ -3,7 +3,6 @@
 namespace App\Http\Controllers;
 
 use App\Models\Log;
-use App\Models\User;
 use Illuminate\Http\Request;
 use GuzzleHttp\Client;
 use Illuminate\Support\Facades\Mail;
@@ -13,12 +12,12 @@ class HackController extends Controller
 {
 
     /**
-     * Vérification si l'email existe via Hunter.io
+     * Check if the email exists using Hunter.io
      *
      * @OA\Get(
      *     path="/api/checkEmailWithHunter/{email}",
      *     tags={"Email Verification"},
-     *     summary="Vérifie si l'email existe via Hunter.io",
+     *     summary="Check if the email exists using Hunter.io",
      *     @OA\Parameter(
      *         name="email",
      *         in="path",
@@ -27,7 +26,7 @@ class HackController extends Controller
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="Email vérifié avec succès",
+     *         description="Email successfully verified",
      *         @OA\JsonContent(
      *             type="object",
      *             @OA\Property(property="email", type="string"),
@@ -37,7 +36,7 @@ class HackController extends Controller
      *     ),
      *     @OA\Response(
      *         response=404,
-     *         description="Email non valide",
+     *         description="Email is not valid",
      *         @OA\JsonContent(
      *             type="object",
      *             @OA\Property(property="message", type="string", example="Email is not valid")
@@ -45,7 +44,7 @@ class HackController extends Controller
      *     ),
      *     @OA\Response(
      *         response=500,
-     *         description="Erreur lors de la vérification de l'email",
+     *         description="Error occurred during email verification",
      *         @OA\JsonContent(
      *             type="object",
      *             @OA\Property(property="error", type="string", example="There was an error verifying the email")
@@ -54,24 +53,17 @@ class HackController extends Controller
      * )
      */
 
-    // Vérification si l'email existe via Hunter.io
-    public function checkEmailWithHunter($email)
+    public function checkEmailWithHunter($email): \Illuminate\Http\JsonResponse
     {
-        // URL API Hunter.io avec l'email et la clé API
+        // API URL with the email and API key for Hunter.io
         $apiUrl = "https://api.hunter.io/v2/email-verifier?email=$email&api_key=b28e3d5396a9e0268b473488cfed9ee61bb8c5ba";
 
         try {
-            // Initialiser un client HTTP
             $client = new Client();
-            // Effectuer la requête à l'API de Hunter.io avec l'email passé
             $response = $client->get($apiUrl);
-
-            // Décoder la réponse JSON
             $data = json_decode($response->getBody(), true);
-
             $user = JWTAuth::parseToken()->authenticate();
 
-            // Créer un log pour la vérification
             Log::create([
                 'id_user' => $user->id,
                 'action' => 'check_email',
@@ -80,21 +72,17 @@ class HackController extends Controller
                 'details' => 'Email checked: ' . $email
             ]);
 
-            // Si l'email est validé par Hunter.io
             if (isset($data['data']['status']) && $data['data']['status'] === 'valid') {
                 return response()->json([
-                    'email' => $data['data']['email'],   // L'adresse email vérifiée
-                    'score' => $data['data']['score'],   // Le score de validation
-                    'status' => $data['data']['status']  // Le statut (valid, invalid, etc.)
+                    'email' => $data['data']['email'],
+                    'score' => $data['data']['score'],
+                    'status' => $data['data']['status']
                 ]);
             }
 
-
-            // Si l'email n'est pas valide
             return response()->json(['message' => 'Email is not valid'], 405);
 
         } catch (\Exception $e) {
-            // Gérer les erreurs (par exemple si l'API ne répond pas)
             return response()->json([
                 'error' => 'There was an error verifying the email',
             ], 500);
@@ -104,25 +92,25 @@ class HackController extends Controller
     /**
      * @OA\Post(
      *     path="/api/spam-email",
-     *     tags={"EmailSpam"},
-     *     summary="Envoyer un spam par e-mail",
+     *     tags={"Email Spam"},
+     *     summary="Send spam emails",
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
      *             required={"email", "content", "count"},
      *             @OA\Property(property="email", type="string", format="email", example="example@example.com"),
-     *             @OA\Property(property="content", type="string", example="Ceci est un message de spam."),
+     *             @OA\Property(property="content", type="string", example="This is a spam message."),
      *             @OA\Property(property="count", type="integer", example=10)
      *         )
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="E-mails envoyés avec succès",
-     *         @OA\JsonContent(@OA\Property(property="message", type="string", example="E-mails envoyés avec succès"))
+     *         description="Emails sent successfully",
+     *         @OA\JsonContent(@OA\Property(property="message", type="string", example="Emails sent successfully"))
      *     ),
      *     @OA\Response(
      *         response=400,
-     *         description="Erreur dans les paramètres fournis",
+     *         description="Invalid parameters provided",
      *         @OA\JsonContent(@OA\Property(property="error", type="string", example="Invalid parameters"))
      *     )
      * )
@@ -142,10 +130,10 @@ class HackController extends Controller
         for ($i = 0; $i < $count; $i++) {
             Mail::raw($content, function ($message) use ($email) {
                 $message->to($email)
-                    ->subject('it\'s a trap');
+                    ->subject("It's a trap");
             });
         }
 
-        return response()->json(['message' => 'E-mails envoyes avec succes'], 200);
+        return response()->json(['message' => 'Emails sent successfully'], 200);
     }
 }
